Fix links and sitemap

--- a/faqs.html
+++ b/faqs.html
@@ -22,14 +22,14 @@
     <main>
         <div class="main-content">
             <h1 class="tac">FAQs</h1>
-            <p>Power outlets are 120 volts (the same as in the United States).</p>
-            <p>Alcohol is not allowed to be served or sold between the hours of midnight and 9:00 a.m.</p>
+            <p id="outlets">Power outlets are 120 volts (the same as in the United States).</p>
+            <p id="alcohol">Alcohol is not allowed to be served or sold between the hours of midnight and 9:00 a.m.</p>
             <p>The drinking age on Taniti is 18 and the drinking age is not strictly enforced.</p>
-            <p>Many younger Tanitians speak fluent English. Very little English is spoken in rural areas, especially by the older residents.</p>
-            <p>There is one hospital and several clinics. The hospital has many multilingual employees.</p>
-            <p>Violent crime is very rare on Taniti, but as tourism increases, there are more reports of pickpocketing and other petty crimes.</p>
-            <p>Taniti enjoys a large number of national holidays, and many tourist attractions and restaurants will be closed on holidays, so visitors should plan accordingly.</p>
-            <p>Taniti uses the U.S. dollar as its currency, but many businesses will also accept euros and yen. Several banks facilitate currency exchange, and many businesses accept major credit cards.</p>
+            <p id="language">Many younger Tanitians speak fluent English. Very little English is spoken in rural areas, especially by the older residents.</p>
+            <p id="hospitals">There is one hospital and several clinics. The hospital has many multilingual employees.</p>
+            <p id="crime">Violent crime is very rare on Taniti, but as tourism increases, there are more reports of pickpocketing and other petty crimes.</p>
+            <p id="holidays">Taniti enjoys a large number of national holidays, and many tourist attractions and restaurants will be closed on holidays, so visitors should plan accordingly.</p>
+            <p id="currency">Taniti uses the U.S. dollar as its currency, but many businesses will also accept euros and yen. Several banks facilitate currency exchange, and many businesses accept major credit cards.</p>
         </div>
     </main>
     <footer>
@@ -41,7 +41,7 @@
         </div>
         <div class="col">
             <a href="./visitor.html" class="page">VISITORS</a>
-            <a href="./visitor-pages/Restaurants.html" class="section">Restaurants</a>
+            <a href="./visitor-pages/restaurants.html" class="section">Restaurants</a>
             <a href="./visitor-pages/grocery-stores.html" class="section">Grocery Stores</a>
             <a href="./visitor-pages/lodging.html" class="section">Lodging</a>
             <a href="./visitor-pages/entertainment.html" class="section">Entertainment</a>
@@ -52,8 +52,8 @@
             <a href="./faqs.html" class="page">FAQs</a>
             <a href="./faqs.html#outlets" class="section">Power Outlets</a>
             <a href="./faqs.html#alcohol" class="section">Alcohol</a>
+            <a href="./faqs.html#language" class="section">Language</a>
             <a href="./faqs.html#hospitals" class="section">Hospitals</a>
-            <a href="./faqs.html#alcohol" class="section">Alcohol</a>
             <a href="./faqs.html#crime" class="section">Crime Rates</a>
             <a href="./faqs.html#holidays" class="section">Holidays</a>
             <a href="./faqs.html#currency" class="section">Currency</a>
