--- a/visitor-pages/restaurants.html
+++ b/visitor-pages/restaurants.html
@@ -75,8 +75,8 @@
             <a href="../faqs.html" class="page">FAQs</a>
             <a href="../faqs.html#outlets" class="section">Power Outlets</a>
             <a href="../faqs.html#alcohol" class="section">Alcohol</a>
+            <a href="../faqs.html#language" class="section">Language</a>
             <a href="../faqs.html#hospitals" class="section">Hospitals</a>
-            <a href="../faqs.html#alcohol" class="section">Alcohol</a>
             <a href="../faqs.html#crime" class="section">Crime Rates</a>
             <a href="../faqs.html#holidays" class="section">Holidays</a>
             <a href="../faqs.html#currency" class="section">Currency</a>
