--- a/visitor-pages/entertainment.html
+++ b/visitor-pages/entertainment.html
@@ -24,7 +24,7 @@
             <div class="side-nav">
                 <p class="side-nav-header">Need more details? Click below!</p>
                 <a class="side-nav-link" href="../visitor.html">Visitors</a>
-                <a class="side-nav-link" href="./Resaurants.html">Resaurants</a>
+                <a class="side-nav-link" href="./resaurants.html">Resaurants</a>
                 <a class="side-nav-link" href="./grocery-stores.html">Grocery Stores</a>
                 <a class="side-nav-link" href="./lodging.html">Lodging</a>
                 <a class="side-nav-link on-link" href="./entertainment.html">Entertainment</a>
@@ -71,7 +71,7 @@
         </div>
         <div class="col">
             <a href="../visitor.html" class="page">VISITORS</a>
-            <a href="./Resaurants.html" class="section">Resaurants</a>
+            <a href="./resaurants.html" class="section">Resaurants</a>
             <a href="./grocery-stores.html" class="section">Grocery Stores</a>
             <a href="./lodging.html" class="section">Lodging</a>
             <a href="./entertainment.html" class="section">Entertainment</a>
@@ -82,8 +82,8 @@
             <a href="../faqs.html" class="page">FAQs</a>
             <a href="../faqs.html#outlets" class="section">Power Outlets</a>
             <a href="../faqs.html#alcohol" class="section">Alcohol</a>
+            <a href="../faqs.html#language" class="section">Language</a>
             <a href="../faqs.html#hospitals" class="section">Hospitals</a>
-            <a href="../faqs.html#alcohol" class="section">Alcohol</a>
             <a href="../faqs.html#crime" class="section">Crime Rates</a>
             <a href="../faqs.html#holidays" class="section">Holidays</a>
             <a href="../faqs.html#currency" class="section">Currency</a>
