--- a/visitor.html
+++ b/visitor.html
@@ -24,7 +24,7 @@
             <div class="side-nav">
                 <p class="side-nav-header">Need more details? Click below!</p>
                 <a class="side-nav-link on-link" href="./visitor.html">Visitors</a>
-                <a class="side-nav-link" href="./visitor-pages/Restaurants.html">Restaurants</a>
+                <a class="side-nav-link" href="./visitor-pages/restaurants.html">Restaurants</a>
                 <a class="side-nav-link" href="./visitor-pages/grocery-stores.html">Grocery Stores</a>
                 <a class="side-nav-link" href="./visitor-pages/lodging.html">Lodging</a>
                 <a class="side-nav-link" href="./visitor-pages/entertainment.html">Entertainment</a>
@@ -51,7 +51,7 @@
         </div>
         <div class="col">
             <a href="./visitor.html" class="page">VISITORS</a>
-            <a href="./visitor-pages/Restaurants.html" class="section">Restaurants</a>
+            <a href="./visitor-pages/restaurants.html" class="section">Restaurants</a>
             <a href="./visitor-pages/grocery-stores.html" class="section">Grocery Stores</a>
             <a href="./visitor-pages/lodging.html" class="section">Lodging</a>
             <a href="./visitor-pages/entertainment.html" class="section">Entertainment</a>
@@ -62,8 +62,8 @@
             <a href="./faqs.html" class="page">FAQs</a>
             <a href="./faqs.html#outlets" class="section">Power Outlets</a>
             <a href="./faqs.html#alcohol" class="section">Alcohol</a>
+            <a href="./faqs.html#language" class="section">Language</a>
             <a href="./faqs.html#hospitals" class="section">Hospitals</a>
-            <a href="./faqs.html#alcohol" class="section">Alcohol</a>
             <a href="./faqs.html#crime" class="section">Crime Rates</a>
             <a href="./faqs.html#holidays" class="section">Holidays</a>
             <a href="./faqs.html#currency" class="section">Currency</a>
