--- a/visitor-pages/restaurants.html
+++ b/visitor-pages/restaurants.html
@@ -33,7 +33,7 @@
             </div>
             <div class="main-content">
                 <div class="page-header">
-                    <h1>restaurants.html</h1>
+                    <h1>Restaurants</h1>
                     <p>Taniti offers a diverse dining experience, blending local island flavors with international favorites. With 10 restaurants across the island, visitors can enjoy everything from freshly caught seafood to American comfort food and Pan-Asian cuisine.</p>
                     <div class="container">
                         <img src="../Assets/grid/moosa-haleem-jAQfsWjXP0s-unsplash.jpg" alt="Beachfront restaurants.html in Taniti"/>
