Still fixing restaurants

--- a/visitor-pages/restaurants.html
+++ b/visitor-pages/restaurants.html
@@ -8,7 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
-    <title>Taniti | restaurants.html</title>
+    <title>Taniti | Restaurants</title>
 </head>
 <body>
     <header>
@@ -24,7 +24,7 @@
             <div class="side-nav">
                 <p class="side-nav-header">Need more details? Click below!</p>
                 <a class="side-nav-link" href="../visitor.html">Visitors</a>
-                <a class="side-nav-link on-link" href="./restaurants.html">restaurants.html</a>
+                <a class="side-nav-link on-link" href="./restaurants.html">Restaurants</a>
                 <a class="side-nav-link" href="./grocery-stores.html">Grocery Stores</a>
                 <a class="side-nav-link" href="./lodging.html">Lodging</a>
                 <a class="side-nav-link" href="./entertainment.html">Entertainment</a>
@@ -36,12 +36,12 @@
                     <h1>Restaurants</h1>
                     <p>Taniti offers a diverse dining experience, blending local island flavors with international favorites. With 10 restaurants across the island, visitors can enjoy everything from freshly caught seafood to American comfort food and Pan-Asian cuisine.</p>
                     <div class="container">
-                        <img src="../Assets/grid/moosa-haleem-jAQfsWjXP0s-unsplash.jpg" alt="Beachfront restaurants.html in Taniti"/>
+                        <img src="../Assets/grid/moosa-haleem-jAQfsWjXP0s-unsplash.jpg" alt="Beachfront restaurants in Taniti"/>
                     </div>
                     <h2>Fresh Seafood & Rice</h2>
                     <p>Taniti’s five seafood-focused restaurants serve up the best of the island’s local flavors, featuring freshly caught fish, traditional rice dishes, and tropical ingredients. These restaurants offer an authentic taste of Tanitian cuisine, perfect for those looking to experience island life through food.</p>
                     <div class="container">
-                        <img src="../Assets/food/dan-gold-E6HjQaB7UEA-unsplash.jpg" alt="American Food Cheeseburgers restaurants.html in Taniti"/>
+                        <img src="../Assets/food/dan-gold-E6HjQaB7UEA-unsplash.jpg" alt="American Food Cheeseburgers restaurants in Taniti"/>
                     </div>
                     <h2>American-Style Dining</h2>
                     <p>For visitors craving familiar flavors, three restaurants on the island specialize in American-style meals. Whether you’re in the mood for a hearty breakfast, a classic burger, or a comforting plate of fries, these casual dining spots offer a taste of home.</p>
