--- a/visitor-pages/entertainment.html
+++ b/visitor-pages/entertainment.html
@@ -24,7 +24,7 @@
             <div class="side-nav">
                 <p class="side-nav-header">Need more details? Click below!</p>
                 <a class="side-nav-link" href="../visitor.html">Visitors</a>
-                <a class="side-nav-link" href="./resaurants.html">Resaurants</a>
+                <a class="side-nav-link" href="./restaurants.html">Restaurants</a>
                 <a class="side-nav-link" href="./grocery-stores.html">Grocery Stores</a>
                 <a class="side-nav-link" href="./lodging.html">Lodging</a>
                 <a class="side-nav-link on-link" href="./entertainment.html">Entertainment</a>
@@ -71,7 +71,7 @@
         </div>
         <div class="col">
             <a href="../visitor.html" class="page">VISITORS</a>
-            <a href="./resaurants.html" class="section">Resaurants</a>
+            <a href="./restaurants.html" class="section">Restaurants</a>
             <a href="./grocery-stores.html" class="section">Grocery Stores</a>
             <a href="./lodging.html" class="section">Lodging</a>
             <a href="./entertainment.html" class="section">Entertainment</a>
