--- a/visitor.html
+++ b/visitor.html
@@ -33,7 +33,7 @@
             </div>
             <div class="main-content">
                 <div class="page-header">
-                    <h1>Vistors' Information Hub</h1>
+                    <h1>Visitors' Information Hub</h1>
                     <p>Planning your trip to Taniti? Here’s everything you need to know about where to stay, what to eat, and how to get around—so you can focus on enjoying your island adventure! Choose a tab to start your research.</p>
                     <div class="container">
                         <img class="center-img" src="./Assets/Taniti-map.svg" alt="Illustrated map of Taniti"/>
